objects/ssot__Personalizer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CatalogDataGraph__c</fullName>
        <label>Catalog Data Graph Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentObjectName__c</fullName>
        <label>Content Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Goal__c</fullName>
        <label>Goal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Personalizer Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastRefreshDateTime__c</fullName>
        <label>Last Refresh Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastRefreshStatus__c</fullName>
        <label>Last Refresh Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastSuccessfulRefreshDateTime__c</fullName>
        <label>Last Successful Refresh Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastTrainedDateTime__c</fullName>
        <label>Last Trained DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizerTrainingStatus__c</fullName>
        <label>Personalizer Training Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileDataGraphId__c</fullName>
        <label>Profile DataGraph</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>